--- a/test/openmp-cpp-fortran/downstream/CMakeLists.txt
+++ b/test/openmp-cpp-fortran/downstream/CMakeLists.txt
@@ -4,8 +4,11 @@ project(openmp-cpp-fortran-user LANGUAGES CXX Fortran)
 
 message(STATUS ${base_install_dir})
 
+set(BLT_ROOT_DIR ${base_install_dir}/lib)
+message(STATUS "${BLT_ROOT_DIR}")
+
 find_package(openmp-cpp-fortran REQUIRED
-             NO_DEFAULT_PATH 
+             NO_DEFAULT_PATH
              PATHS ${base_install_dir}/lib/cmake/openmp-cpp-fortran)
 
 add_executable(openmp-cpp-fortran-user openmp-cpp-fortran-user.F)
@@ -16,11 +19,6 @@ set_source_files_properties(
     PROPERTIES
     Fortran_FORMAT FREE)
 
-# Including BLTOptions should enable FORTRAN
-# TODO(bowen) These two includes should be done automatically with 
-# a macro that just include the whole cmake directory present in the install path?
-include(${base_install_dir}/lib/cmake/BLTOptions.cmake)
-include(${base_install_dir}/lib/cmake/SetupOpenMP.cmake)
 get_target_property(imported_omp_flags blt::openmp INTERFACE_COMPILE_OPTIONS)
 
 # The below print statement should emit the generator expression for the OMP flags,
