--- a/test/openmp-cpp-fortran/downstream/CMakeLists.txt
+++ b/test/openmp-cpp-fortran/downstream/CMakeLists.txt
@@ -2,12 +2,10 @@ cmake_minimum_required(VERSION 3.14)
 
 project(openmp-cpp-fortran-user LANGUAGES CXX Fortran)
 
-message(STATUS ${base_install_dir})
-
 set(BLT_ROOT_DIR ${base_install_dir}/lib)
 message(STATUS "${BLT_ROOT_DIR}")
 
-find_package(openmp-cpp-fortran REQUIRED
+find_package(openmp-cpp-fortran REQUIRED 
              NO_DEFAULT_PATH
              PATHS ${base_install_dir}/lib/cmake/openmp-cpp-fortran)
 
@@ -19,8 +17,7 @@ set_source_files_properties(
     PROPERTIES
     Fortran_FORMAT FREE)
 
-get_target_property(imported_omp_flags blt::openmp INTERFACE_COMPILE_OPTIONS)
-
+get_target_property(imported_omp_flags openmp INTERFACE_COMPILE_OPTIONS)
 # The below print statement should emit the generator expression for the OMP flags,
 # which is necessary because the flag is CPP and Fortran compiler dependent.
 message(STATUS "${imported_omp_flags}")
