respond to Kenny's (very helpful) feedback

--- a/test/mpi-cpp-fortran/downstream/CMakeLists.txt
+++ b/test/mpi-cpp-fortran/downstream/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 3.14)
 
 project(mpi-cpp-fortran-user LANGUAGES CXX Fortran)
 
+# Print the install directory of the base project for debugging purposes.
 message(STATUS ${base_install_dir})
 
+# This call creates targets with relevant compile flags (i.e. for Fortran and
+# cpp) for MPI.
 find_package(mpi-cpp-fortran REQUIRED
              NO_DEFAULT_PATH
              PATHS ${base_install_dir}/lib/cmake/mpi-cpp-fortran)
@@ -15,9 +18,3 @@ set_source_files_properties(
     mpi-cpp-fortran-user.F
     PROPERTIES
     Fortran_FORMAT FREE)
-
-get_target_property(mpi_flags mpi INTERFACE_COMPILE_OPTIONS)
-
-# The below print statement should emit the generator expression for the OMP flags,
-# which is necessary because the flag is CPP and Fortran compiler dependent.
-message(STATUS "${mpi_flags}")
