--- a/test/openmp-mpi-cpp/downstream/CMakeLists.txt
+++ b/test/openmp-mpi-cpp/downstream/CMakeLists.txt
@@ -1,36 +1,33 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(openmp-cpp-fortran-user LANGUAGES CXX)
+project(openmp-mpi-cpp-user LANGUAGES CXX)
 
 set(BLT_CXX_STD c++14 CACHE STRING "")
 set(ENABLE_MPI On CACHE BOOL "")
 
+# Load BLT
 if (NOT BLT_LOADED)
-    if (DEFINED BLT_SOURCE_DIR)
-      if (NOT EXISTS ${BLT_SOURCE_DIR}/SetupBLT.cmake)
-        message(FATAL_ERROR "Given BLT_SOURCE_DIR does not contain SetupBLT.cmake")
-      endif()
-    else ()
-      set (BLT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../../../blt CACHE PATH "")
-  
-      if (NOT EXISTS ${BLT_SOURCE_DIR}/SetupBLT.cmake)
-        message(FATAL_ERROR "\
-        The BLT submodule is not present. \
-        If in git repository run the following two commands:\n \
-        git submodule init\n \
-        git submodule update")
-      endif ()
-    endif ()
-  
-    include(${BLT_SOURCE_DIR}/SetupBLT.cmake)
+  include(../../cmake/FindBLT.cmake)
 endif()
 
-message(STATUS "${BLT_ROOT_DIR}")
-
+# Calling find_package sets up the TPL targets needed by the project
+# in its argument.
 find_package(openmp-mpi-cpp REQUIRED 
              NO_DEFAULT_PATH
              PATHS ${base_install_dir}/lib/cmake/openmp-mpi-cpp
              ${base_install_dir})
+
+if (NOT TARGET openmp)
+  message(FATAL_ERROR "Target OpenMP was not configured successfully during"
+                      "downstream project configuration.")
+endif()
+
+# The downstream project also introduces mpi, so this target must 
+# exist as well.
+if (NOT TARGET mpi)
+  message(FATAL_ERROR "Target MPI was not configured successfully during"
+                      "downstream project configuration.")
+endif()
 
 blt_add_library(
     NAME openmp-mpi-cpp-user
