--- a/test/openmp-cpp-fortran/base/CMakeLists.txt
+++ b/test/openmp-cpp-fortran/base/CMakeLists.txt
@@ -5,41 +5,29 @@ project(openmp-cpp-fortran LANGUAGES CXX)
 set(BLT_CXX_STD c++14 CACHE STRING "")
 set(ENABLE_OPENMP On CACHE BOOL "")
 
+# Load BLT
 if (NOT BLT_LOADED)
-  if (DEFINED BLT_SOURCE_DIR)
-    if (NOT EXISTS ${BLT_SOURCE_DIR}/SetupBLT.cmake)
-      message(FATAL_ERROR "Given BLT_SOURCE_DIR does not contain SetupBLT.cmake")
-    endif()
-  else ()
-    set (BLT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../../../blt CACHE PATH "")
-
-    if (NOT EXISTS ${BLT_SOURCE_DIR}/SetupBLT.cmake)
-      message(FATAL_ERROR "\
-      The BLT submodule is not present. \
-      If in git repository run the following two commands:\n \
-      git submodule init\n \
-      git submodule update")
-    endif ()
-  endif ()
-
-  include(${BLT_SOURCE_DIR}/SetupBLT.cmake)
+  include(../../cmake/FindBLT.cmake)
 endif()
 
-blt_install_tpl_setups(DESTINATION lib/cmake)
+# Add third-party library setup files to the project's installation
+# directory.
+blt_install_tpl_setups(DESTINATION lib/cmake/${PROJECT_NAME})
 
 blt_add_library(
     NAME openmp-cpp-fortran
     SOURCES openmp-cpp-fortran.cpp
     DEPENDS_ON openmp)
 
-# install library
+# Install library
 install(TARGETS openmp-cpp-fortran
   EXPORT openmp-cpp-fortran-targets)
 
 install(EXPORT openmp-cpp-fortran-targets
   DESTINATION  lib/cmake/openmp-cpp-fortran)
 
-# export targets & blt targets
+# Install the *-config.cmake file, which will include `BLTSetupTargets` 
+# when a downstream project calls `find_package` on this library.
 install(FILES
   ${PROJECT_SOURCE_DIR}/openmp-cpp-fortran-config.cmake
   DESTINATION lib/cmake/openmp-cpp-fortran)
