--- a/test/openmp-mpi-cpp/base/CMakeLists.txt
+++ b/test/openmp-mpi-cpp/base/CMakeLists.txt
@@ -1,45 +1,35 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(open-mpi-cpp LANGUAGES CXX)
+project(openmp-mpi-cpp LANGUAGES CXX)
 
 set(BLT_CXX_STD c++14 CACHE STRING "")
 set(ENABLE_OPENMP On CACHE BOOL "")
 
+# Load BLT
 if (NOT BLT_LOADED)
-  if (DEFINED BLT_SOURCE_DIR)
-    if (NOT EXISTS ${BLT_SOURCE_DIR}/SetupBLT.cmake)
-      message(FATAL_ERROR "Given BLT_SOURCE_DIR does not contain SetupBLT.cmake")
-    endif()
-  else ()
-    set (BLT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../../../blt CACHE PATH "")
-
-    if (NOT EXISTS ${BLT_SOURCE_DIR}/SetupBLT.cmake)
-      message(FATAL_ERROR "\
-      The BLT submodule is not present. \
-      If in git repository run the following two commands:\n \
-      git submodule init\n \
-      git submodule update")
-    endif ()
-  endif ()
-
-  include(${BLT_SOURCE_DIR}/SetupBLT.cmake)
+  include(../../cmake/FindBLT.cmake)
 endif()
 
-blt_install_tpl_setups(DESTINATION lib/cmake/)
+# Add third-party library setup files to the project's installation
+# directory.
+blt_install_tpl_setups(DESTINATION lib/cmake/${PROJECT_NAME})
 
+# Add the base library with its single source file and header file.
 blt_add_library(
   NAME openmp-mpi-cpp
   SOURCES openmp-mpi-cpp.cpp
-  HEADERS include/openmp-mpi-cpp.hpp
+  HEADERS openmp-mpi-cpp.hpp
   DEPENDS_ON openmp)
 
-install(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN *.hpp)
+# Add the header file to the installation.
+install(FILES openmp-mpi-cpp.hpp DESTINATION include)
 
-# install library
+# Install the header along with the necessary cmake files.
 install(TARGETS openmp-mpi-cpp
   EXPORT openmp-mpi-cpp-targets)
 
-# export targets & blt targets
+# Install the *-config.cmake file, which will include `BLTSetupTargets` 
+# when a downstream project calls `find_package` on this library.
 install(FILES
   ${PROJECT_SOURCE_DIR}/openmp-mpi-cpp-config.cmake
   DESTINATION lib/cmake/openmp-mpi-cpp)
