Add verbose and susbet of tests command line options to test runner script.  Respond to review feedback

--- a/test/openmp-cpp-fortran/base/CMakeLists.txt
+++ b/test/openmp-cpp-fortran/base/CMakeLists.txt
@@ -7,7 +7,7 @@ set(ENABLE_OPENMP On CACHE BOOL "")
 
 # Load BLT
 if (NOT BLT_LOADED)
-  include(${PATH_TO_BLT}/SetupBLT.cmake)
+  include(${BLT_SOURCE_DIR}/SetupBLT.cmake)
 endif()
 
 # Add third-party library setup files to the project's installation
