--- a/test/hip-config-test/downstream/CMakeLists.txt
+++ b/test/hip-config-test/downstream/CMakeLists.txt
@@ -27,3 +27,5 @@ blt_add_executable(
     SOURCES hip-config-test-user.cpp
     DEPENDS_ON blt_hip blt_hip_runtime hip-config-test
 )
+
+target_include_directories(hello-hip PUBLIC ${base_install_dir}/include)
